--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -2,5 +2,6 @@
   <ul>
     <li><a href="{{ url_for('home') }}">Головна</a></li>
     <li><a href="{{ url_for('menu') }}">Меню</a></li>
+    <li><a href="{{ url_for('admin') }}">Адмін</a></li>
   </ul>
 </nav>
