--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -3,5 +3,7 @@
     <li><a href="{{ url_for('home') }}">Головна</a></li>
     <li><a href="{{ url_for('menu') }}">Меню</a></li>
     <li><a href="{{ url_for('admin') }}">Адмін</a></li>
+   <li><a href="{{ url_for('weather_page') }}">Погода</a></li>
+
   </ul>
 </nav>
